@@ -32,7 +32,6 @@ import com.starrocks.sql.optimizer.rule.RuleType;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 // for a simple min/max/count aggregation query like
 // 'select min(c1),max(c2) from table',
@@ -62,7 +61,7 @@ public class MinMaxOptOnScanRule extends TransformationRule {
 
         // we can only apply this rule to the queries met all the following conditions:
         // 1. no group by key (only partition columns)
-        // 2. no `having` condition or other filters
+        // 2. no `having` condition or other filters (only partition columns)
         // 3. no limit(???)
         // 4. only contain MIN/MAX agg functions
         // 5. all arguments to agg functions are primitive columns (not necessarily)
@@ -82,7 +81,7 @@ public class MinMaxOptOnScanRule extends TransformationRule {
         if (groupingKeys != null && !groupingKeys.isEmpty()) {
             // all group by keys are partition keys.
             if (!scanOperator.getPartitionColumns()
-                    .containsAll(groupingKeys.stream().map(x -> x.getName()).collect(Collectors.toList()))) {
+                    .containsAll(groupingKeys.stream().map(ColumnRefOperator::getName).toList())) {
                 return false;
             }
             // must be un-partitioned table, or partition columns are identity columns.
@@ -95,6 +94,11 @@ public class MinMaxOptOnScanRule extends TransformationRule {
 
         // no materialized column in predicate of aggregation
         if (hasMaterializedColumnInPredicate(scanOperator, aggregationOperator.getPredicate())) {
+            return false;
+        }
+
+        // not applicable if there is no aggregation functions, like `distinct x`.
+        if (aggregationOperator.getAggregations().isEmpty()) {
             return false;
         }
 
@@ -113,10 +117,7 @@ public class MinMaxOptOnScanRule extends TransformationRule {
                 return false;
             }
             ScalarOperator arg = arguments.get(0);
-            if (!arg.isColumnRef()) {
-                return false;
-            }
-            return true;
+            return arg.isColumnRef();
         });
         return allValid;
     }
